# SwitchingRSBChatter

./: README.md
client_BeBot/: CMakeLists.txt  main.cxx  rsb.conf
client_PC/: CMakeLists.txt  main.cxx
server_BeBot/: main.cxx
server_PC/: CMakeLists.txt  main.cxx  rsb.conf
